@@ -100,8 +100,12 @@ static const struct default_hl_group_info default_groups_for_curses[] = {
     {HLG_TEXT, A_NORMAL, A_NORMAL, COLOR_WHITE, COLOR_BLACK},
     {HLG_SEARCH, A_NORMAL, A_NORMAL, COLOR_BLACK, COLOR_WHITE},
     {HLG_STATUS_BAR, A_NORMAL, A_NORMAL, COLOR_BLACK, COLOR_WHITE},
-    {HLG_ARROW, A_BOLD, A_BOLD, COLOR_GREEN, COLOR_BLACK},
-    {HLG_LINE_HIGHLIGHT, A_BOLD, A_BOLD, COLOR_BLACK, COLOR_GREEN},
+    {HLG_EXECUTING_LINE_ARROW, A_BOLD, A_BOLD, COLOR_GREEN, COLOR_BLACK},
+    {HLG_SELECTED_LINE_ARROW, A_BOLD, A_BOLD, COLOR_WHITE, COLOR_BLACK},
+    {HLG_EXECUTING_LINE_HIGHLIGHT, A_BOLD, A_BOLD, COLOR_BLACK, COLOR_GREEN},
+    {HLG_SELECTED_LINE_HIGHLIGHT, A_BOLD, A_BOLD, COLOR_BLACK, COLOR_WHITE},
+    {HLG_EXECUTING_LINE_BLOCK, A_BOLD, A_BOLD, COLOR_GREEN, COLOR_BLACK},
+    {HLG_SELECTED_LINE_BLOCK, A_BOLD, A_BOLD, COLOR_WHITE, COLOR_BLACK},
     {HLG_ENABLED_BREAKPOINT, A_BOLD, A_BOLD, COLOR_RED, COLOR_BLACK},
     {HLG_DISABLED_BREAKPOINT, A_BOLD, A_BOLD, COLOR_YELLOW, COLOR_BLACK},
     {HLG_SELECTED_LINE_NUMBER, A_BOLD, A_BOLD, COLOR_WHITE, COLOR_BLACK},
@@ -123,8 +127,12 @@ static const struct default_hl_group_info default_groups_for_background_dark[]
     {HLG_TEXT, A_NORMAL, A_NORMAL, -1, -1},
     {HLG_SEARCH, A_REVERSE, A_REVERSE, -1, -1},
     {HLG_STATUS_BAR, A_REVERSE, A_REVERSE, -1, -1},
-    {HLG_ARROW, A_BOLD, A_BOLD, COLOR_GREEN, -1},
-    {HLG_LINE_HIGHLIGHT, A_BOLD, A_BOLD, COLOR_BLACK, COLOR_GREEN},
+    {HLG_EXECUTING_LINE_ARROW, A_BOLD, A_BOLD, COLOR_GREEN, -1},
+    {HLG_SELECTED_LINE_ARROW, A_BOLD, A_BOLD, COLOR_WHITE, -1},
+    {HLG_EXECUTING_LINE_HIGHLIGHT, A_BOLD, A_BOLD, COLOR_BLACK, COLOR_GREEN},
+    {HLG_SELECTED_LINE_HIGHLIGHT, A_BOLD, A_BOLD, COLOR_BLACK, COLOR_WHITE},
+    {HLG_EXECUTING_LINE_BLOCK, A_REVERSE, A_REVERSE, COLOR_GREEN, -1},
+    {HLG_SELECTED_LINE_BLOCK, A_REVERSE, A_REVERSE, COLOR_WHITE, -1},
     {HLG_ENABLED_BREAKPOINT, A_BOLD, A_BOLD, COLOR_RED, -1},
     {HLG_DISABLED_BREAKPOINT, A_BOLD, A_BOLD, COLOR_YELLOW, -1},
     {HLG_SELECTED_LINE_NUMBER, A_BOLD, A_BOLD, -1, -1},
@@ -148,8 +156,16 @@ static struct hl_group_name hl_group_names[] = {
     {HLG_TEXT, "Normal"},
     {HLG_SEARCH, "IncSearch"},
     {HLG_STATUS_BAR, "StatusLine"},
-    {HLG_ARROW, "Arrow"},
-    {HLG_LINE_HIGHLIGHT, "LineHighlight"},
+    /* Legacy option that is now represented by ExecutingLineArrow */
+    {HLG_EXECUTING_LINE_ARROW, "Arrow"},
+    {HLG_EXECUTING_LINE_ARROW, "ExecutingLineArrow"},
+    {HLG_SELECTED_LINE_ARROW, "SelectedLineArrow"},
+    /* Legacy option that is now represented by ExecutingLineHighlight */
+    {HLG_EXECUTING_LINE_HIGHLIGHT, "LineHighlight"},
+    {HLG_EXECUTING_LINE_HIGHLIGHT, "ExecutingLineHighlight"},
+    {HLG_SELECTED_LINE_HIGHLIGHT, "SelectedLineHighlight"},
+    {HLG_EXECUTING_LINE_BLOCK, "ExecutingLineBlock"},
+    {HLG_SELECTED_LINE_BLOCK, "SelectedLineBlock"},
     {HLG_ENABLED_BREAKPOINT, "Breakpoint"},
     {HLG_DISABLED_BREAKPOINT, "DisabledBreakpoint"},
     {HLG_SELECTED_LINE_NUMBER, "SelectedLineNr"},
