@@ -35,8 +35,12 @@ enum hl_group_kind {
     HLG_TEXT,
     HLG_SEARCH,
     HLG_STATUS_BAR,
-    HLG_ARROW,
-    HLG_LINE_HIGHLIGHT,
+    HLG_EXECUTING_LINE_ARROW,
+    HLG_SELECTED_LINE_ARROW,
+    HLG_EXECUTING_LINE_HIGHLIGHT,
+    HLG_SELECTED_LINE_HIGHLIGHT,
+    HLG_EXECUTING_LINE_BLOCK,
+    HLG_SELECTED_LINE_BLOCK,
     HLG_ENABLED_BREAKPOINT,
     HLG_DISABLED_BREAKPOINT,
     HLG_SELECTED_LINE_NUMBER,
