@@ -181,13 +181,15 @@ In addition to showing the source code, CGDB also displays to the user the
 currently executing line. The line number will be highlighted green, to
 represent that the particular line, is the current line being debugged by GDB.
 Also, CGDB will display an arrow extending from the line number, to the 
-source line.  You can configure what type of arrow CGDB uses with the
-@code{:set arrowstyle} configuration option. By default, the @code{short}
-arrow is used.  However, my personal favorite is the @code{long} arrow.
+source line.  You can configure what type of display CGDB uses with the
+@code{:set executinglinedisplay} configuration option. By default,
+the @code{longarrow} display is used.
 
 As you navigate through the source window, the current line the cursor is
-on will be highlighted white.  This simply helps you keep track of where you
-are in the file.
+on will be highlighted with a block.  This simply helps you keep track of
+where you are in the file. You can configure what type of display CGDB uses
+with the @code{:set selectedlinedisplay} configuration option. By deafult,
+the @code{block} display is used.
 
 Also, you can set or delete breakpoints in CGDB from the source window.  Simply
 navigate to the line that you are interested in setting a breakpoint, and hit
@@ -570,15 +572,6 @@ my be negated by appending @samp{no} to the front.  For example:
 @kbd{:set noignorecase} turns on case-sensitive searching.
 
 @table @kbd
-@item :set as=@var{style}
-@itemx :set arrowstyle=@var{style}
-Set the arrow style to @var{style}.  Possible values for @var{style}
-are @samp{short}, @samp{long}, and @samp{highlight}.  Changes the style of 
-the arrow that is used to indicate the currently executing line in the source 
-viewer.  The default value is short.  A longer arrow is available, for easier 
-readability.  Finally, the @samp{highlight} option draws no arrow at all, 
-instead drawing the entire line in inverse video.
-
 @item :set asr
 @itemx :set autosourcereload
 If this is on, CGDB will automatically reload a source file if it has 
@@ -600,9 +593,33 @@ readline in vi mode.  If the user types @code{set cgdbmodekey=<PageUp>}
 then the @kbd{Page Up} key will put CGDB into CGDB mode and the @kbd{ESC}
 key will flow through to readline.
 
+@item :set eld=@var{style}
+@itemx :set executinglinedisplay=@var{style}
+Set the executing line display to @var{style}.  Possible values for @var{style}
+are @samp{shortarrow}, @samp{longarrow}, @samp{highlight}, and @samp{block}.
+Changes the display that is used to indicate the currently executing line in
+the source viewer.  The default value is @samp{longarrow}.
+The @samp{shortarrow} option draws an arrow next to the source line number.
+The @samp{longarrow} option also draws an arrow next to the source line
+number, but extends the arrow until the source code.  The @samp{highlight}
+option draws the entire line in inverse video and the @samp{block} option
+draws an inverse block (cursor) next to the source code being executed.
+
 @item :set ic
 @itemx :set ignorecase
 Sets searching case insensitive.  The default is off.
+
+@item :set sld=@var{style}
+@itemx :set selectedlinedisplay=@var{style}
+Set the selected line display to @var{style}.  Possible values for @var{style}
+are @samp{shortarrow}, @samp{longarrow}, @samp{highlight}, and @samp{block}.
+Changes the display that is used to indicate the currently selected line in
+the source viewer.  The default value is @samp{block}.
+The @samp{shortarrow} option draws an arrow next to the source line number.
+The @samp{longarrow} option also draws an arrow next to the source line
+number, but extends the arrow until the source code.  The @samp{highlight}
+option draws the entire line in inverse video and the @samp{block} option
+draws an inverse block (cursor) next to the source code being selected.
 
 @item :set stc
 @itemx :set showtgdbcommands
@@ -848,12 +865,24 @@ bar also uses this group.
 @item IncSearch
 This represents the group used when the user is searching in either the source 
 window, or the @dfn{file dialog window}.
-@item Arrow
-This represents the arrow that CGDB draws to point to the currently viewed 
-line.
-@item LineHighlight
-This represents the group used when the user has the @code{arrowstyle} option 
-set to @code{highlight}.
+@item SelectedLineArrow
+This represents the group used when the user has the
+@code{selectedlinedisplay} set to @code{shortarrow} or @code{longarrow}.
+@item ExecutedLineArrow
+This represents the group used when the user has the
+@code{executinglinedisplay} set to @code{shortarrow} or @code{longarrow}.
+@item SelectedLineHighlight
+This represents the group used when the user has the
+@code{selectedlinedisplay} option set to @code{highlight}.
+@item ExecutingLineHighlight
+This represents the group used when the user has the
+@code{executinglinedisplay} option set to @code{highlight}.
+@item SelectedLineBlock
+This represents the group used when the user has the
+@code{selectedlinedisplay} option set to @code{block}.
+@item ExecutingLineBlock
+This represents the group used when the user has the
+@code{executinglinedisplay} option set to @code{block}.
 @item Breakpoint
 This represents the group that is used when CGDB displays a line that has a 
 breakpoint set.
